--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1>Artmantonio</h1>
+	<div class="header">
+		<h1>Artmantonio</h1>
+	</div>
 	<div class="main">
-		<h2>Wie ben ik?</h2>
-		<p>Er volgt snel meer informatie</p>
+		<div class="chapter">
+			<h2>Wie ben ik?</h2>
+			<p>Er volgt snel meer informatie</p>
+		</div>
+		<div class="chapter">
+			<h2>Wie ben ik?</h2>
+			<p>Er volgt snel meer informatie</p>
+		</div>
 	</div>
 </body>
 </html>
