--- a/index.html
+++ b/index.html
@@ -10,14 +10,26 @@
 		<h1>Artmantonio</h1>
 	</div>
 	<div class="main">
+		<h3>❤️‍🔥 Drawing fantasy/DnD related characters❤️‍🔥</h3>
+
+		<img src="https://cdn.cara.app/production/posts/684683c9-b62e-4185-8f3e-a67000760501/artmantonio-Yc0XGirn7mMfVz-VvB16M-1718051661993.jpg">
+
 		<div class="chapter">
-			<h2>Wie ben ik?</h2>
+			<h2>COMMISSIONS</h2>
 			<p>Er volgt snel meer informatie</p>
 		</div>
+
 		<div class="chapter">
-			<h2>Wie ben ik?</h2>
-			<p>Er volgt snel meer informatie</p>
+			<h2>ABOUT ME</h2>
+			<i>Dark fantasy enthusiast - Creatures and characters - Worldbuilder</i>
+
+			<p>I use a mechanical pencil for all my work</p>
 		</div>
+	</div>
+	<div class="footer">
+		socials:
+		<a href="https://cara.app/artmantonio/portfolio">Cara</a> -
+		<a href="https://www.instagram.com/artmantonio/">Instagram</a>
 	</div>
 </body>
 </html>
